--- a/src/app/products/pages/product-page/product-page.component.html
+++ b/src/app/products/pages/product-page/product-page.component.html
@@ -18,9 +18,10 @@
     </div>
 
     <div class="col-auto">
-      <span customLabel
-      [color]="color"
-      [errors]="myForm.get('name')?.errors"
+      <span
+        customLabel
+        [color]="color"
+        [errors]="myForm.get('name')?.errors"
       >Temporal</span>
     </div>
 
